test/golden/hello { world.golden

INITIALPATH:7:35: error:
    • 
unexpected end of input
expecting "::", ":" or "}"

    • In the quasi-quotation: [fmt|hello { world|]
  |
7 | main = putStrLn [fmt|hello { world|]
  |                                   ^
